[gd_scene load_steps=16 format=3 uid="uid://c0dy4nem7b3yk"]

[ext_resource type="Texture2D" uid="uid://ddh8ga3mbk17w" path="res://assets/flappy-bird-assets-master/sprites/background-day.png" id="1_d6npe"]
[ext_resource type="PackedScene" uid="uid://blfbnp85g42dd" path="res://scenes/pipe.tscn" id="2_2jn8m"]
[ext_resource type="Texture2D" uid="uid://d21muxcunf0he" path="res://assets/flappy-bird-assets-master/sprites/bluebird-upflap.png" id="2_ipd2b"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_q8bbo"]
[ext_resource type="Texture2D" uid="uid://cdjo7wyjxxgpk" path="res://assets/flappy-bird-assets-master/sprites/bluebird-midflap.png" id="3_r48y3"]
[ext_resource type="Texture2D" uid="uid://cumavg3lw2jvg" path="res://assets/flappy-bird-assets-master/sprites/bluebird-downflap.png" id="4_74bnb"]
[ext_resource type="Texture2D" uid="uid://ia82wfpnkkmm" path="res://assets/flappy-bird-assets-master/sprites/base.png" id="7_uf7jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5enl"]
size = Vector2(335.072, 24.5601)

[sub_resource type="CircleShape2D" id="CircleShape2D_xjju5"]
radius = 15.2971

[sub_resource type="CircleShape2D" id="CircleShape2D_c5xtd"]
radius = 16.4924

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1a2p"]
size = Vector2(66, 906)

[sub_resource type="Animation" id="Animation_etuon"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hjv3w"]
resource_name = "bouncing"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gj7ul"]
_data = {
"RESET": SubResource("Animation_etuon"),
"bouncing": SubResource("Animation_hjv3w")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_pvaue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ipd2b")
}, {
"duration": 1.0,
"texture": ExtResource("3_r48y3")
}, {
"duration": 1.0,
"texture": ExtResource("4_74bnb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="level" type="Node2D"]

[node name="Background-day" type="Sprite2D" parent="."]
position = Vector2(581, 325)
scale = Vector2(4.03819, 1.25977)
texture = ExtResource("1_d6npe")

[node name="Ground" type="Area2D" parent="."]
position = Vector2(585, 643)
scale = Vector2(3.45833, 0.892857)

[node name="Ground" type="Sprite2D" parent="Ground"]
position = Vector2(-1.1566, 0)
texture = ExtResource("7_uf7jv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(-1.73492, -41.44)
shape = SubResource("RectangleShape2D_f5enl")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(0, 250)
script = ExtResource("2_q8bbo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(38, 22)
shape = SubResource("CircleShape2D_xjju5")

[node name="Detect" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Detect"]
position = Vector2(38, 22)
shape = SubResource("CircleShape2D_c5xtd")

[node name="Reseter" type="Area2D" parent="Player"]
position = Vector2(4, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Reseter"]
position = Vector2(-90, 193)
shape = SubResource("RectangleShape2D_f1a2p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "bouncing"
libraries = {
"": SubResource("AnimationLibrary_gj7ul")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(39, 21.5)
scale = Vector2(1, 1.125)
sprite_frames = SubResource("SpriteFrames_pvaue")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 307.0
offset_top = 2.0
offset_right = 347.0
offset_bottom = 42.0
text = "0"

[node name="Pipe" parent="." instance=ExtResource("2_2jn8m")]
position = Vector2(257, 5)

[node name="Pipe2" parent="." instance=ExtResource("2_2jn8m")]
position = Vector2(446, 94)

[node name="Pipe3" parent="." instance=ExtResource("2_2jn8m")]
position = Vector2(595, -12)

[node name="Pipe4" parent="." instance=ExtResource("2_2jn8m")]
position = Vector2(758, 55)

[node name="Pipe5" parent="." instance=ExtResource("2_2jn8m")]
position = Vector2(924, 14)

[connection signal="body_entered" from="Ground" to="Player" method="_on_ground_body_entered"]
[connection signal="area_entered" from="Player/Detect" to="Player" method="_on_detect_area_entered"]
[connection signal="body_entered" from="Player/Detect" to="Player" method="_on_detect_body_entered"]
[connection signal="body_entered" from="Player/Reseter" to="Player" method="_on_reseter_body_entered"]
